--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="hero.name">
+<div *ngIf="hero">
 
   <h2>{{hero.name | uppercase}} Details</h2>
   <div><span>id: </span>{{hero.id}}</div>
@@ -7,5 +7,6 @@
       <input [(ngModel)]="hero.name" placeholder="name" />
     </label>
   </div>
+  <button (click)="goBack()">go back</button>
 
 </div>
